<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expandedPlayerCard"
    android:layout_width="match_parent"
    android:paddingBottom="8dp"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_shadow"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:visibility="gone">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="206dp" />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:background="@drawable/circle_play_card"
        android:elevation="16dp"

        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="0dp"

            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:alpha="0.9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bkgImgExpand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/background_image"
                android:scaleType="centerCrop"
                android:alpha="0.8"
                android:visibility="visible" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_fileName="bubble.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                android:elevation="16dp"
                android:paddingBottom="50dp"
                android:alpha="0.3"
                app:lottie_ignoreDisabledSystemAnimations="true"
                android:layout_gravity="center"
                app:lottie_colorFilter="@color/transparent" />



        </androidx.cardview.widget.CardView>


        <SeekBar
            android:id="@+id/songProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:max="100"
            android:padding="16dp"
            android:progress="0"
            android:progressDrawable="@drawable/progress"
            android:thumb="@drawable/thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expanded_song_title" />

        <TextView
            android:id="@+id/elapsedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/_0_00"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/songProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/songProgressBar" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/_3_45"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/songProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/songProgressBar" />

        <ImageView
            android:id="@+id/expanded_albumCover"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_square"
            android:contentDescription="@string/cover"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:clipToOutline="true"
            app:layout_constraintBottom_toTopOf="@+id/expanded_artistName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/collapseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_bkg_transparent"
            android:contentDescription="@string/cover"
            android:rotation="270"
            android:src="@drawable/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expanded_albumCover"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white">


        </ImageButton>

        <TextView
            android:id="@+id/expanded_artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/artist"
            android:textColor="#FFFFFF"

            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expanded_albumCover" />

        <TextView
            android:id="@+id/expanded_song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/song_title"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expanded_artistName" />

        <ImageView
            android:id="@+id/expanded_previousBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/previous"
            android:padding="16dp"
            android:src="@drawable/previous"
            app:layout_constraintBottom_toBottomOf="@+id/cardPlayPause"
            app:layout_constraintEnd_toStartOf="@+id/cardPlayPause"
            app:layout_constraintTop_toTopOf="@+id/cardPlayPause"
            app:tint="#FFFFFF" />


        <LinearLayout
            android:id="@+id/cardPlayPause"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/circle_bkg_two"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="@+id/expanded_albumCover"
            app:layout_constraintStart_toStartOf="@+id/expanded_albumCover"
            app:layout_constraintTop_toBottomOf="@+id/songProgressBar">


            <ImageView
                android:id="@+id/expanded_playPauseButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:contentDescription="@string/pause"


                android:src="@drawable/play_hollow"
                app:layout_constraintEnd_toEndOf="@+id/expanded_albumCover"
                app:layout_constraintStart_toStartOf="@+id/expanded_albumCover"
                app:layout_constraintTop_toBottomOf="@+id/expanded_song_title"
                app:tint="@android:color/white" />

        </LinearLayout>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/circle_bkg_transparent"
            android:contentDescription="@string/previous"
            android:src="@drawable/transparent_draw"
            app:layout_constraintBottom_toBottomOf="@+id/expanded_nextBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expanded_nextBtn"
            app:layout_constraintTop_toBottomOf="@+id/expanded_nextBtn"
            app:tint="@android:color/transparent">


        </ImageButton>


        <ImageView
            android:id="@+id/expanded_nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:contentDescription="@string/previous"
            android:padding="16dp"
            android:rotation="180"
            android:src="@drawable/previous"
            app:layout_constraintBottom_toBottomOf="@+id/cardPlayPause"
            app:layout_constraintStart_toEndOf="@+id/cardPlayPause"
            app:layout_constraintTop_toTopOf="@+id/cardPlayPause"
            app:tint="#FFFFFF" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>