<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Main content inside a ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/alice_blue">


        <ImageView
            android:id="@+id/bkgImgExpand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:alpha="0.7"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/menu"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="@+id/searchBar"
            app:layout_constraintEnd_toStartOf="@+id/searchBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/searchBar"
            app:tint="@color/text_color" />

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/circular_textedit"
            android:drawableStart="@drawable/search_ico"
            android:drawablePadding="8dp"
            android:drawableTint="@color/text_color"
            android:gravity="center|start"
            android:hint="@string/search_songs_playlists_and_artists"
            android:importantForAutofill="no"
            android:inputType=""
            android:textColor="@color/search_text"
            android:textColorHint="@color/search_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="488dp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/searchBar"
            app:layout_constraintStart_toStartOf="@+id/searchBar"
            app:layout_constraintTop_toBottomOf="@+id/searchBar">

            <TextView
                android:id="@+id/trackCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_0_tracks"
                android:layout_weight="1"
                android:textColor="@color/text_color"
                android:padding="12dp"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:textStyle="bold"
                android:textSize="12sp" />



        </LinearLayout>



        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SongsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="100dp"
            android:clipToPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <FrameLayout
            android:id="@+id/overlayContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:clickable="true"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <include
            layout="@layout/expanded_player_card" />

        <include
            layout="@layout/compact_player_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/semi_transparent_background"
        app:headerLayout="@layout/drawer_header"
        tools:ignore="VisualLintBounds" />

</androidx.drawerlayout.widget.DrawerLayout>
